--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.6.1",
     "react-scripts": "5.0.1",
+    "react-spinners": "^0.13.8",
     "react-tabulator": "^0.18.1",
     "sweetalert2": "^11.7.1",
     "sweetalert2-react-content": "^5.0.7",
