--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-countdown": "^2.3.5",
     "react-countup": "^6.4.0",
     "react-dom": "^18.2.0",
+    "react-error-boundary": "^4.0.4",
     "react-router-dom": "^6.6.1",
     "react-scripts": "5.0.1",
     "react-spinners": "^0.13.8",
